--- a/0419/news/template/tuijian.html
+++ b/0419/news/template/tuijian.html
@@ -1,6 +1,9 @@
 <!--推荐页面-->
 <xheader></xheader>
+<xalert></xalert>
+<!--<xsearch></xsearch>-->
 <div class="content">
 	<lunbotu></lunbotu>
 	<newslist></newslist>
 </div>
+<xload></xload>
