--- a/0419/news/template/yule.html
+++ b/0419/news/template/yule.html
@@ -1,2 +1,8 @@
 <!--娱乐页面-->
-<xheader></xheader>
+<div>
+   <xheader></xheader>
+   <xalert></xalert>
+   <yulelist></yulelist>
+
+</div>
+<xload></xload>
