--- a/0419/teacher-publish/template/detail.html
+++ b/0419/teacher-publish/template/detail.html
@@ -10,7 +10,7 @@
 						{{newData.text}}
 					</p>
 					<p>
-						<img ng-src="{{newData.image?newData.image:''}}" alt="">
+						<img ng-click="showGallery()" ng-src="{{newData.image?newData.image:''}}" alt="">
 					</p>
 				</section>
 				<section>
@@ -21,5 +21,14 @@
 				</section>
 			</section>
 		</article>
+	</div>
+	<div class="weui-gallery" style="display: {{isShowGallery?'block':'none'}};">
+		<span class="weui-gallery__img" style="background-image: url({{newData.image}});"></span>
+		<div class="weui-gallery__opr">
+			<a ng-click="isShowGallery=false" href="javascript:" class="weui-gallery__del">
+				<!--<i class="weui-icon-delete weui-icon_gallery-delete">隐藏</i>-->
+				<p style="color: white;">隐藏</p>
+			</a>
+		</div>
 	</div>
 </div>
