--- a/0419/news/template/tuijian.html
+++ b/0419/news/template/tuijian.html
@@ -1,7 +1,7 @@
 <!--推荐页面-->
 <xheader></xheader>
 <xalert></xalert>
-<!--<xsearch></xsearch>-->
+<xsearch></xsearch>
 <div class="content">
 	<lunbotu></lunbotu>
 	<newslist></newslist>
